# pineapple-pipeline

./: Dockerfile  README.md  dbt_project.yml  docker-compose.yml  get_manifest.sh  manifest.json  profiles.yml  pyproject.toml
ci/: Dockerfile  deploy.yml  docker-entrypoint.sh  run_ci.sh  set_secrets.sh
ci/cloudbuild/: deploy.yaml  deploy.yml
macros/: get_custom_schema.sql
models/application/: dim_repository.py  dim_repository.yml  fact_github_user.sql
models/application/nutrisense/: stg_subscriptions.sql
models/gold/github/: fact_github_user.yml
models/raw/: github.yml  nutrisense.yml
models/silver/nutrisense/: stg_active_members.sql  stg_new_members.sql  stg_subscriptions.sql
